--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,1 +1,40 @@
-﻿
+﻿{
+  "env": {
+    "es2021": true,
+    "browser": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "extends": [
+    "eslint:recommended"
+  ],
+  "plugins": [],
+  "rules": {
+    "no-unused-vars": "warn",
+    "no-undef": "error",
+    "no-console": "off",
+    "no-debugger": "warn",
+    "no-empty": "warn",
+    "no-unreachable": "error",
+    "no-constant-condition": "warn",
+    "no-fallthrough": "warn",
+    "no-extra-boolean-cast": "warn",
+    "no-prototype-builtins": "warn",
+    "eqeqeq": [ "warn", "always" ],
+    "curly": "warn",
+    "no-eval": "error",
+    "no-implied-eval": "error",
+    "no-return-await": "warn",
+    "require-atomic-updates": "warn",
+    "no-unsafe-finally": "error",
+    "no-unsafe-negation": "error",
+    "no-var": "warn",
+    "prefer-const": "warn",
+    "prefer-template": "warn",
+    "no-alert": "off",
+    "spellcheck/spell-checker": "off"
+  }
+}
